--- a/version2/ux-ui-demo_files/anchor.html
+++ b/version2/ux-ui-demo_files/anchor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0188)https://www.google.com/recaptcha/api2/anchor?ar=1&k=6LcXUrcdAAAAAI0DifnJwCl1QekuKBM8vYzlbb6-&co=aHR0cDovL2xvY2FsaG9zdDo4MA..&hl=en&v=4rwLQsl5N_ccppoTAwwwMrEN&size=invisible&cb=niwhjgdmfgi9 -->
+<!-- saved from url=(0188)https://www.google.com/recaptcha/api2/anchor?ar=1&k=6LcXUrcdAAAAAI0DifnJwCl1QekuKBM8vYzlbb6-&co=aHR0cDovL2xvY2FsaG9zdDo4MA..&hl=en&v=4rwLQsl5N_ccppoTAwwwMrEN&size=invisible&cb=1s1buymf50m8 -->
 <html dir="ltr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <style type="text/css">
